fleshed out explanations

--- a/baseball_stats/2021_MLB_stats.ipynb
+++ b/baseball_stats/2021_MLB_stats.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Point to the SQLLTIE Db\n",
-    "db_path = r'./2021_Baseball.db'\n",
+    "db_path = r'/home/zach/dev/demos/2021_Baseball_PURE.db'\n",
     "if not os.path.exists(db_path):\n",
     "    #This may take a while (~30 mins)\n",
     "    fangraphscraper = fangraph.FangraphScraper(db_path)\n",
@@ -48,105 +48,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sanitizing Data\n",
-    "The batting and pitching data is individual game level stats. \n",
-    "Here we cast all basic stats as integers, as they are all strings in the database.\n",
-    "Note the casting will error and be ignored, (ie do nothing) on non integer data, such as batting average, ERA, slugging percentage etc.\n",
-    "These statistics, when of interest, are rederived later, from the raw data. \n",
-    "We also turn the date string into a much more useful datetime object. \n",
+    "### Spot Check Batting Data Quality \n",
+    "According to [this baseball reference link](https://www.baseball-reference.com/players/t/tatisfe02.shtml) Tatis had the following select stats in 2021 Regular Season\n",
     "\n",
-    "## A Note on Innings Pitched\n",
-    "For some reason, baseball stores fractional innings as .1 = 1/3 . Similiar to a base 3 system, but only for the decimal. so 3.1 innings is 3 1/3 innings in base 10. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clean Batting Data\n",
-    "batting_df = pd.read_sql('SELECT * FROM bat', con=conn)\n",
-    "for col in batting_df.columns:\n",
-    "    batting_df[col] = batting_df[col].astype('int', errors='ignore')\n",
-    "batting_df['Datetime'] = pd.to_datetime(batting_df['Date'], format=\"%Y-%m-%d\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clean Position Data (Games Played at Each Position)\n",
-    "# make a column for each position and count the games played at the position\n",
-    "# prepend an f to each position to incidate its a fielding stat and avoid conflating Singles (1B) with the first base position\n",
-    "unique_pos = []\n",
-    "for dashed_pos in batting_df.Pos.unique():\n",
-    "    [ unique_pos.append('f' + pos) for pos in dashed_pos.split('-') if 'f' + pos not in unique_pos]\n",
-    "batting_df[unique_pos] = 0\n",
+    "| Stat  |Value |\n",
+    "| ------| -----|\n",
+    "| AB    | 478|\n",
+    "| HR    | 42     |\n",
+    "| RBI   | 97 |\n",
     "\n",
-    "for pos in unique_pos:\n",
-    "    batting_df.loc[batting_df['Pos'] == pos[1::], pos] = 1\n",
-    "\n",
-    "# Add Aggregate Positions (Like RF/CF/LF) being interchangeable\n",
-    "batting_df['fOF'] = batting_df[['fRF', 'fCF', 'fLF']].sum(axis=1)\n",
-    "unique_pos.append('fOF')"
+    "Running the code below, our data set agrees\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['index', 'Team', 'Opp', 'BO', 'Pos', 'G', 'AB', 'PA', 'H', '1B', '2B',\n",
+      "       '3B', 'HR', 'R', 'RBI', 'BB', 'IBB', 'SO', 'HBP', 'SF', 'SH', 'GDP',\n",
+      "       'SB', 'CS', 'datetime', 'name', 'id', 'fDH', 'fC', 'f1B', 'F2B', 'fSS',\n",
+      "       'f3B', 'fPH', 'fLF', 'fCF', 'fRF', 'fOF'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HR      42\n",
+       "AB     478\n",
+       "RBI     97\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Sanity Check (Tatis Played Games at SS, RF, CF, DH)\n",
-    "batting_df.loc[batting_df['name'].str.contains('tatis-jr'), unique_pos].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Aggregate Batting Data for a Full Season\n",
-    "batting_df_sum = batting_df.groupby(['id', 'name']).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clean Pitching Data\n",
-    "pitching_df = pd.read_sql('SELECT * FROM pit', con=conn)\n",
-    "for col in pitching_df.columns:\n",
-    "    pitching_df[col] = pitching_df[col].astype('int', errors='ignore')\n",
-    "\n",
-    "pitching_df['IP'] = pitching_df['IP'].apply(lambda x: bb_stat_utils.IP_basis_conversion(x))\n",
-    "pitching_df_sum = pitching_df.groupby('name').sum()\n",
-    "pitching_df['Datetime'] = pd.to_datetime(pitching_df['Date'], format=\"%Y-%m-%d\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate 'advanced', non integer metrics for the full season,\n",
-    "#  these functions are applied in place\n",
-    "bb_stat_utils.calc_SLUG_TOT(batting_df_sum)\n",
-    "bb_stat_utils.calc_WHIP_TOT(pitching_df_sum)"
+    "tatis_df = pd.read_sql(\"SELECT * FROM bat WHERE name LIKE '%tatis%'\", con=conn)\n",
+    "print(tatis_df.columns)\n",
+    "tatis_df[['HR', 'AB', 'RBI']].sum()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TOPSIS"
+    "### Spot Check Pitching Data Quality \n",
+    "According to [this baseball reference link](https://www.baseball-reference.com/players/d/darviyu01.shtml) Yu Darvish had the following select stats in 2021 Regular Season\n",
+    "\n",
+    "| Stat  |Value |\n",
+    "| ------| -----|\n",
+    "| GS    | 30|\n",
+    "| IP    | 166.1     | \n",
+    "| H   | 138 |\n",
+    "|ERA | 4.22|\n",
+    "\n",
+    "Running the code below, our data set agrees, Note that 0.1 is equivalent to 0.333 for innings pitched, and that ERA is a derived parameter. (ER/(IP/9))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ER      78.000000\n",
+       "IP     166.333333\n",
+       "H      138.000000\n",
+       "ERA      4.220441\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "darvish_df = pd.read_sql(\"SELECT * FROM pit WHERE name LIKE '%darvish%'\", con=conn)\n",
+    "\n",
+    "darvish_df = darvish_df[['ER', 'IP', 'H']].sum()\n",
+    "darvish_df['ERA'] = darvish_df['ER'] / ( darvish_df['IP'] / 9)\n",
+    "darvish_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nice, our bespoke data set agrees with an indepedent data set on baseball reference! Now we can do use to draft the ultimate FBB team!"
    ]
   },
   {
@@ -154,27 +153,108 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "cats = ['HR', 'RBI', 'OB_TOT', 'SB', 'SLUG_TOT']\n",
-    "cats_power = {key: 1.0 for key in cats}\n",
+    "# TOPSIS - Drafting the ideal FBB Team\n",
+    "We can use the [topsis alogrithm](https://en.wikipedia.org/wiki/TOPSIS) (often used in design probems) to decide who is the ideal candidate for a given Baseball position wheile drafting our team.\n",
     "\n",
-    "min_games_played_at_pos = 20\n",
-    "for pos in unique_pos:\n",
-    "    mask = (batting_df_sum[pos] > min_games_played_at_pos)\n",
-    "    sub_df = batting_df_sum.loc[mask,:].copy()\n",
-    "    if len(sub_df) > 0:\n",
-    "        score_df = bb_stat_utils.topsis(df=sub_df, cats=cats, cats_power=cats_power,  csv_name=None)\n",
-    "        bb_stat_utils.determine_pick_value(score_df)\n",
-    "        display(HTML(f'<h1>{pos}</h1><b>' + score_df.iloc[:10][cats + ['distance_from_ideals', 'improvement', 'pick_value']].to_html()+'<\\b>'))\n",
+    "TOPSIS relies on comparing numerical, what appears uncompareable. For example TOPSIS allows us to compare a player with 32 HRs and 11 SB to a player with 15 HR and 21 SB. \n",
+    "\n",
+    "As shown in the example above, Roto scoring weights all categories, equally, so our TOPSIS algorithm will use equal weights for all categories. As discussed below this does not imply that stolen bases and home runs are equally as common. \n",
+    "\n",
+    "TOPSIS compares all entries (players in this case) and determines which player have the lowest distance from ideal. \n",
+    "\n",
+    "##### Catagorical Rarity - Modification to TOPSIS\n",
+    "The TOPSIS algortithm presented here has actually been slightly modified from the text book definition to account for scarcity, for example RBIs being more common than HR. To see this look into the `topsis` function itself and note the second normalization step not typically present in textbook definitions\n",
+    "\n",
+    "## First Cut - No Knowledge of Team Make Up\n",
+    "The analysis below shows the rankings and relative values of all players for the given position (or in pitching just all pitchers)\n",
+    "\n",
+    "The offsensive categories are standard in FBB and are the catagories used in the author's league. (OBP- On Base Percentage and SLUG -Slugging Percentage are derived metrics)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DatabaseError",
+     "evalue": "Execution failed on sql 'schema bat': near \"schema\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m~/dev/demos/baseball_stats/.env/lib/python3.8/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2055\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2056\u001b[0;31m             \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2057\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mcur\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"schema\": syntax error",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_5976/413611355.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mGROUP\u001b[0m \u001b[0mBY\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mid\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \"\"\"\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mpos_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'schema bat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0mpos_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;31m# bb_stat_utils.calc_SLG_OBP(pos_df)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/demos/baseball_stats/.env/lib/python3.8/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mread_sql\u001b[0;34m(sql, con, index_col, coerce_float, params, parse_dates, columns, chunksize)\u001b[0m\n\u001b[1;32m    600\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    601\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpandas_sql\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSQLiteDatabase\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 602\u001b[0;31m         return pandas_sql.read_query(\n\u001b[0m\u001b[1;32m    603\u001b[0m             \u001b[0msql\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    604\u001b[0m             \u001b[0mindex_col\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindex_col\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/demos/baseball_stats/.env/lib/python3.8/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mread_query\u001b[0;34m(self, sql, index_col, coerce_float, params, parse_dates, chunksize, dtype)\u001b[0m\n\u001b[1;32m   2114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2115\u001b[0m         \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_convert_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2116\u001b[0;31m         \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2117\u001b[0m         \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcol_desc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol_desc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2118\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/demos/baseball_stats/.env/lib/python3.8/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2066\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2067\u001b[0m             \u001b[0mex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDatabaseError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Execution failed on sql '{args[0]}': {exc}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2068\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mex\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2069\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2070\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDatabaseError\u001b[0m: Execution failed on sql 'schema bat': near \"schema\": syntax error"
+     ]
+    }
+   ],
+   "source": [
+    "cats = ['HR', 'RBI', 'SB','OBP', 'SLG']  \n",
+    "unique_pos = ['fDH', 'fC', 'f1B', 'F2B', 'fSS', 'f3B', 'fPH', 'fLF', 'fCF', 'fRF']\n",
+    "\n",
+    "cats_power = {key: 1.0 for key in cats} # This should be negative if a lower value is desired (ie offesnive strikeouts)\n",
+    "\n",
+    "# pos = 'fC'\n",
+    "# s = \"\"\"SELECT\n",
+    "# name,\n",
+    "# id,\n",
+    "# SUM(HR),\n",
+    "# SUM(RBI),\n",
+    "# SUM(SB),\n",
+    "# SUM(1B),\n",
+    "# SUM(2B),\n",
+    "# SUM(3B)\n",
+    "# FROM bat\n",
+    "# WHERE '{}' > 1\n",
+    "# GROUP BY name, id;\n",
+    "# \"\"\".format(*cats[:3] + [pos])\n",
+    "# print(s)\n",
+    "s = \"\"\"SELECT\n",
+    "SUM()\n",
+    "FROM bat\n",
+    "WHERE '{fC}' > 1\n",
+    "GROUP BY name, id;\n",
+    "\"\"\"\n",
+    "pos_df = pd.read_sql(s, con=conn)\n",
+    "pos_df\n",
+    "# bb_stat_utils.calc_SLG_OBP(pos_df)\n",
+    "# pos_df[cats + ['name', 'id', pos]]\n",
+    "# Index(['index', 'Team', 'Opp', 'BO', 'Pos', 'G', 'AB', 'PA', 'H', '1B', '2B',\n",
+    "#        '3B', 'HR', 'R', 'RBI', 'BB', 'IBB', 'SO', 'HBP', 'SF', 'SH', 'GDP',\n",
+    "#        'SB', 'CS', 'datetime', 'name', 'id', 'fDH', 'fC', 'f1B', 'F2B', 'fSS',\n",
+    "#        'f3B', 'fPH', 'fLF', 'fCF', 'fRF', 'fOF'],\n",
+    "\n",
+    "# min_games_played_at_pos = 20\n",
+    "# for pos in unique_pos:\n",
+    "#     mask = (batting_df_sum[pos] > min_games_played_at_pos)\n",
+    "#     sub_df = batting_df_sum.loc[mask,:].copy()\n",
+    "#     if len(sub_df) > 0:\n",
+    "#         score_df = bb_stat_utils.topsis(df=sub_df, cats=cats, cats_power=cats_power,  csv_name=None)\n",
+    "#         bb_stat_utils.determine_pick_value(score_df)\n",
+    "#         display(HTML(f'<h1>{pos}</h1><b>' + score_df.iloc[:10][cats + ['distance_from_ideals', 'improvement', 'pick_value']].to_html()+'<\\b>'))\n",
     "        \n",
-    "        fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(16,9))\n",
-    "        fig.suptitle(pos)\n",
-    "        ax[0].plot(score_df['distance_from_ideals'].values)\n",
-    "        ax[0].set_ylabel('Distance From Ideal')\n",
-    "        ax[1].hist(score_df['improvement'].values, bins=20)\n",
-    "        ax[1].set_ylabel('Pick Value')\n",
-    "        ax[0].grid()\n",
-    "        ax[1].grid()        "
+    "#         fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(16,9))\n",
+    "#         fig.suptitle(pos)\n",
+    "#         ax[0].plot(score_df['distance_from_ideals'].values)\n",
+    "#         ax[0].set_ylabel('Distance From Ideal')\n",
+    "#         ax[1].hist(score_df['improvement'].values, bins=20)\n",
+    "#         ax[1].set_ylabel('Pick Value')\n",
+    "#         ax[0].grid()\n",
+    "#         ax[1].grid()        "
    ]
   },
   {
